# qrclip_rs

./: Cargo.toml
src/: lib.rs  main.rs
