[package]
name = "qrclip_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-win = "4.4.1"
image = "^0.24"
rqrr = "0.5.1"
eframe = {version="^0.18"}

# release mode
[profile.release]
lto = true
debug = false
opt-level = 3
